# gfaas

./: Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  logic.rs
crates/remote-fn/: Cargo.toml
crates/remote-fn/src/: lib.rs  logic.rs
docs/: Motivation.md  yagna_manual_task_setup.md  yagna_self_hosting.md
examples/bellman/: Cargo.toml  README.md
examples/bellman/src/: main.rs
examples/hello/: Cargo.toml  README.md
examples/hello/src/: main.rs
examples/mandelbrot/: Cargo.toml
examples/mandelbrot/src/: main.rs
examples/sum/: Cargo.toml  README.md
examples/sum/src/: main.rs
gfaas/: all.html  attr.remote_fn.html  index.html  sidebar-items.js  struct.Error.html
gfaas/__private/: index.html  sidebar-items.js
gfaas/__private/package/: index.html  sidebar-items.js  struct.Package.html
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  main.rs
src/gfaas/: lib.rs.html
