[package]
name = "gfaas"
version = "0.1.0"
authors = ["Jakub Konka <kubkon@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/gfaas"
homepage = "https://github.com/golemfactory/gfaas"
documentation = "https://github.com/golemfactory/gfaas"
description = "Distribute heavy-workload functions on Golem Network or other backend"

[dependencies]
gfaas-macro = { path = "crates/macro", version = "0.1" }
anyhow = "1"
dotenv = "0.15"
futures = "0.3"
zip = "0.5"
serde_json = "1"
tempfile = "3.1"
tokio = { version = "0.2", features = ["blocking"] }
ya-runtime-wasi = "0.2"
yarapi = "0.1"
ya-agreement-utils = "0.1"
thiserror = "1.0.20"

[workspace]
members = [
    "crates/cli",
]
exclude = [
    "examples/hello",
    "examples/sum",
]
