[package]
name = "gfaas-cli"
version = "0.1.0"
authors = ["Jakub Konka <kubkon@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/gfaas"
homepage = "https://github.com/golemfactory/gfaas"
documentation = "https://github.com/golemfactory/gfaas"
description = "gfaas build tool for use with the gfaas crate"

[[bin]]
path = "src/main.rs"
name = "gfaas"

[dependencies]
anyhow = "1"
structopt = "0.3.12"
serde_json = "1"
toml = "0.5"
