[package]
name = "gfaas-macro"
version = "0.1.1"
authors = ["Jakub Konka <kubkon@golem.network>"]
edition = "2018"
license = "GPL-3.0"
description = "Proc-macro logic used by gfaas crate"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
appdirs = "0.2"
