[package]
name = "hello"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
gfaas = { path = "../../" }
actix-rt = "1"

[patch.crates-io]
ya-client = { git = "https://github.com/golemfactory/ya-client" }
ya-client-model = { git = "https://github.com/golemfactory/ya-client" }
ya-agreement-utils = { git = "https://github.com/golemfactory/yagna" }
ya-core-model = { git = "https://github.com/golemfactory/yagna" }
ya-net = { git = "https://github.com/golemfactory/yagna" }
ya-service-api = { git = "https://github.com/golemfactory/yagna" }
ya-service-api-derive = { git = "https://github.com/golemfactory/yagna" }
ya-service-api-interfaces = { git = "https://github.com/golemfactory/yagna" }
ya-service-bus = { git = "https://github.com/golemfactory/yagna" }
gftp = { git = "https://github.com/golemfactory/yagna" }
ya-sb-proto = { git = "https://github.com/golemfactory/yagna" }
ya-sb-util = { git = "https://github.com/golemfactory/yagna" }
