[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Jakub Konka <kubkon@golem.network>"]
edition = "2018"

[dependencies]
actix-rt = "1"
anyhow = "1"
gfaas = { path = "../../", version = "0.3" }
futures = "0.3"
png = "0.16"
pretty_env_logger = "0.4"
structopt = "0.3"

[gfaas_dependencies]
num-complex = "0.3"
